# TradeSync

./: LICENSE  README.md
api.tradesync.com/api-tradesync/: pyproject.toml
api.tradesync.com/api-tradesync/api_tradesync/: app.py
tradesync/: package-lock.json  package.json
tradesync/src/app/: globals.css  layout.js  page.js
tradesync/src/app/components/: bot.jsx  chart.jsx  newsletter.jsx
tradesync/src/app/components/footer/: footer.jsx
tradesync/src/app/components/header/: header.jsx
tradesync/src/app/components/hero/: hero.jsx
tradesync/src/app/email/: app.js  package-lock.json  package.json
tradesync/src/app/email/controllers/: sendMail.js
tradesync/src/app/home/: page.jsx  right.jsx
tradesync/src/app/login/: page.jsx
tradesync/src/app/portfolio/: page.jsx
tradesync/src/app/strategy/: page.jsx
tradesync/src/app/strategy/1/: charttemplate.jsx  page.jsx
tradesync/src/app/strategy/2/: page.jsx
tradesync/src/app/strategy/3/: page.jsx
tradesync/src/app/test/: page.jsx
tradesync/src/app/wallet/: page.jsx
